--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -3,7 +3,13 @@
   <h1><%= @recipe.name %></h1>
   <h4><%= @recipe.prep_time %></h4>
 
+  <h4>Ingredients</h4>
+  <% @recipe.recipe_ingredients.each do |recipe_ingredient| %>
+    <br>
+      <%= recipe_ingredient.ingredient.name %>
+  <% end %>
+
   <div id="button-back">
-    <%= link_to "Back to recipes", recipes_path %>
+    <%= link_to "Back to recipes", root_path %>
   </div>
 </div>
