--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,13 +1,15 @@
 #button-back {
-  color: white;
+  color: black;
   text-decoration: none;
   background-color: #FAA613;
   padding: 10px 10px;
-  border-radius: 25px;
+  border-radius: 8px;
+  border: solid 1px black;
   opacity: 0.6;
 
   &:hover {
     color: white;
     opacity: 1;
+    text-decoration: none;
   }
 }
