--- a/app/assets/stylesheets/components/_content.scss
+++ b/app/assets/stylesheets/components/_content.scss
@@ -1,6 +1,5 @@
 .content {
-  margin-top: 20px;
   padding: 20px 0;
   background-color: white;
-  border-radius: 20px;
+  // border-radius: 20px 20px 0 0;
 }
