--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,8 +18,8 @@
   </head>
 
   <body>
+    <%= render 'shared/navbar' %>
     <div class="container">
-      <%#= render 'shared/navbar' %>
       <%= render 'shared/flashes' %>
 
       <%= yield %>
